@@ -1769,6 +1769,7 @@ ui.MenuNames.VIEW = Pohled
 ui.MenuNames.VIEW.MAP_DECORATIONS = Dekorace mapy
 ui.MenuNames.WINDOW = Okno
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronizace
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = P\u0159ibl\u00ED\u017Een\u00ED/Odd\u00E1len\u00ED
 ui.MultiInputDialog.description-goes-here = vlo\u017Ete popis
 ui.MultiInputDialog.images-goes-here = vlo\u017Ete obr\u00E1zek
