@@ -1770,6 +1770,7 @@ ui.MenuNames.VIEW = Ansicht
 ui.MenuNames.VIEW.MAP_DECORATIONS = Kartendekoration
 ui.MenuNames.WINDOW = Fenster
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = Beschreibung
 ui.MultiInputDialog.images-goes-here = Bild
