@@ -1800,6 +1800,7 @@ ui.MenuNames.VIEW=Vista
 ui.MenuNames.VIEW.MAP_DECORATIONS=Elementos decorativos
 ui.MenuNames.WINDOW=Ventana
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Sincronizar
+ui.MenuNames.RASTER.VECTORIALIZE = Vectorizar
 ui.MenuNames.ZOOM=Zoom
 ui.MultiInputDialog.description-goes-here=Descripci\u00F3n
 ui.MultiInputDialog.images-goes-here=imagen
