@@ -1768,6 +1768,7 @@ ui.MenuNames.VIEW = N\u00E9zet
 ui.MenuNames.VIEW.MAP_DECORATIONS = T\u00E9rk\u00E9p d\u00EDsz\u00EDt\u00E9sek
 ui.MenuNames.WINDOW = Ablak
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Szinkroniz\u00E1l\u00E1s
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = Nagy\u00EDt
 ui.MultiInputDialog.description-goes-here = Ide j\u00F6n a le\u00EDr\u00E1s.
 ui.MultiInputDialog.images-goes-here = Ide j\u00F6nnek a k\u00E9pek.
