@@ -1769,6 +1769,7 @@ ui.MenuNames.VIEW = Visualizar
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = Janela
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:Zoom
 ui.MultiInputDialog.description-goes-here = Descri\u00e7\u00e3o
 ui.MultiInputDialog.images-goes-here = Imagem
