@@ -1767,6 +1767,7 @@ ui.MenuNames.VIEW = \u0BAA\u0BBE\u0BB0\u0BCD\u0B95\u0BCD\u0B95\u0BB5\u0BC1\u0BAE
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0B9A\u0BBE\u0BB3\u0BB0\u0BAE\u0BCD
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u0B92\u0BB0\u0BC1\u0B99\u0BCD\u0B95\u0BBF\u0BA3\u0BC8\u0BAA\u0BCD\u0BAA\u0BC1
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:Zoom
 ui.MultiInputDialog.description-goes-here = \u0BB5\u0BBF\u0BB5\u0BB0\u0BAE\u0BCD  \u0B87\u0B99\u0BCD\u0B95\u0BC7 \u0B9A\u0BC6\u0BB2\u0BCD\u0B95\u0BBF\u0BB1\u0BA4\u0BC1.
 ui.MultiInputDialog.images-goes-here = \u0BAA\u0B9F\u0BAE\u0BCD  \u0B87\u0B99\u0BCD\u0B95\u0BC7 \u0B9A\u0BC6\u0BB2\u0BCD\u0B95\u0BBF\u0BB1\u0BA4\u0BC1.
