@@ -1899,6 +1899,7 @@ ui.MenuNames.VIEW = \u67E5\u770B
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u7A97\u53E3
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540C\u6B65
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:
 #T:ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = \u4ECB\u7D39\u653E\u5728\u9019\u88E1\u3002
